# sphere

./: .gitignore  .swp  CMakeLists.txt  CapsuleMesh.h  FlatMesh.h  compositelgr.h  compositemesh.h  createmesh.h  elementsaseemble.h  main.cpp  mesh.vtk  outputmesh.h  precompile.h  rotatemesh.h  sphericmesh.h
2DMesh/: 2DMesh.h
DataTypes/Edge/: Edge.h
DataTypes/Element/: Element.h
DataTypes/Mesh/: Mesh.h
DataTypes/Mesh/detail/: Mesh.inl
DualFVMesh/: DualFVMesh.h
DualFVMesh/detail/: DualFVMesh.inl
Edges/: Edges.h  EdgesMesh.h
Edges/detail/: Edges.inl  EdgesMesh.inl  EdgesMeshUtils.inl  edges.vtk  mesh.vtk  nodes_to_edges.inl
Elems/: Elems.h
Elems/OuterElems/: OuterElems.h  OuterElems.inl
Elems/SphericalElems/: SphericalElems.h  SphericalElems.inl
Elems/detail/: Elems.inl
MeshProperties/: MeshProperties.h
MeshTools/ElemsByEdges/: ElemsByEdges.h
MeshTools/ElemsByEdges/detail/: ElemsByEdges.inl
NodeMesh/: NodeMesh.h
data/: mesh.txt
detail/: CapsuleMesh.inl  CapsuleMeshAlgorithms.inl  FlatMesh.inl  FlatMeshAlgorithms.inl
meths/: detailfunctions.inl
src/: createmesh.h  outputmesh.h
